# safe-run

./: README.md  pyproject.toml
safe_run/: __init__.py  config.py  display.py  executor.py  explainer.py  main.py  risk.py
shell/: safe_run.bash  safe_run.zsh
tests/: __init__.py  test_config.py  test_executor.py  test_explainer.py  test_risk.py
