[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "safe_run"
version = "0.1.0"
description = "An intelligent shell command wrapper that explains and risk-assesses commands using LLMs before executing them."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "safe_run contributors" }
]
requires-python = ">=3.9"
keywords = ["cli", "shell", "llm", "safety", "openai", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "openai>=1.0",
    "httpx>=0.25",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
safe_run = "safe_run.main:cli"

[project.urls]
Homepage = "https://github.com/safe_run/safe_run"
Repository = "https://github.com/safe_run/safe_run"
"Bug Tracker" = "https://github.com/safe_run/safe_run/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["safe_run*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["safe_run"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
